implement QR Code scanner for Join Session Button in ContentView;

--- a/encoreApp/encoreApp/Info.plist
+++ b/encoreApp/encoreApp/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Encore uses the camera to let you scan the QR code for joining a Session.</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
