--- a/encoreApp/encoreApp/Info.plist
+++ b/encoreApp/encoreApp/Info.plist
@@ -58,6 +58,8 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
