--- a/encoreApp/encoreApp/Info.plist
+++ b/encoreApp/encoreApp/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key></key>
 	<string></string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>encore wants to save your session QR Code to Photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>encore wants to save your session QR Code to Photos</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -38,7 +42,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>encore uses the camera to let you scan a session's QR code for joining.</string>
+	<string>encore uses the camera to let you scan a session&apos;s QR code for joining.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
